# mxl

./: .containerignore  .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile.in  README.md  SUMMARY.md  index.html  latest  vcpkg.json  versions.json
.devcontainer/: Dockerfile
.devcontainer/ubuntu24/: devcontainer.json
.devcontainer/ubuntu24-no-gpu/: devcontainer.json
.devcontainer/ubuntu25/: devcontainer.json
.github/workflows/: build.yml  link_requirement.yml
GOVERNANCE/: GOVERNANCE.md
api/: index.html  versions.json
api/latest/: AddressVector_8hpp__incl.md5  Address_8cpp.html  Address_8cpp__incl.md5  Address_8cpp_source.html  Address_8hpp.html  Address_8hpp__incl.md5  CompletionQueue_8hpp__dep__incl.map  Completion_8hpp__dep__incl.map  Completion_8hpp_source.html  ContinuousFlowReader_8hpp_source.html  DataLayout_8hpp__dep__incl.map  Deferred_8hpp_source.html  DiscreteFlowReader_8hpp_source.html  DomainWatcher_8hpp_source.html  Domain_8hpp__dep__incl.map  Domain_8hpp_source.html  Endpoint_8cpp__incl.map  Endpoint_8cpp__incl.md5  Endpoint_8cpp_source.html  Endpoint_8hpp__incl.map  EventQueue_8cpp_source.html  Event_8cpp_source.html  Exception_8hpp.html  Exception_8hpp__dep__incl.md5  Exception_8hpp_source.html  FILogging_8cpp_source.html  FabricAddress_8cpp__incl.map  FabricAddress_8cpp__incl.md5  FabricAddress_8cpp_source.html  FabricAddress_8hpp.js  FabricAddress_8hpp__dep__incl.map  FabricAddress_8hpp__dep__incl.md5  FabricAddress_8hpp__incl.map  FabricInfoHelpers_8cpp_source.html  FabricInfoHelpers_8hpp.html  FabricInfoHelpers_8hpp__dep__incl.map  FabricInfoHelpers_8hpp__incl.map  FabricInfoHelpers_8hpp_source.html  FabricInfo_8cpp.html  FabricInfo_8hpp__dep__incl.md5  (+289 more)
api/main/: AddressVector_8cpp.html  AddressVector_8cpp__incl.map  AddressVector_8cpp__incl.md5  AddressVector_8cpp_source.html  AddressVector_8hpp.html  AddressVector_8hpp__incl.map  AddressVector_8hpp_source.html  Address_8cpp__incl.map  Address_8hpp.js  Address_8hpp__incl.map  Address_8hpp_source.html  AudioBounceBuffer_8cpp_source.html  AudioBounceBuffer_8hpp_source.html  CompletionQueue_8cpp_source.html  CompletionQueue_8hpp.html  CompletionQueue_8hpp__dep__incl.md5  CompletionQueue_8hpp_source.html  Completion_8cpp_source.html  Completion_8hpp.html  Completion_8hpp__dep__incl.md5  ContinuousFlowData_8hpp_source.html  ContinuousFlowWriter_8hpp_source.html  DataLayout_8cpp_source.html  DataLayout_8hpp.html  DataLayout_8hpp__dep__incl.md5  DataLayout_8hpp_source.html  DiscreteFlowData_8hpp_source.html  DiscreteFlowWriter_8hpp_source.html  DomainWatcher_8cpp_source.html  Domain_8cpp_source.html  Domain_8hpp.html  Domain_8hpp__dep__incl.md5  DynamicPointerCast_8hpp_source.html  Endpoint_8cpp.html  Endpoint_8hpp.html  Endpoint_8hpp__incl.md5  Endpoint_8hpp_source.html  EventQueue_8hpp_source.html  Event_8hpp_source.html  Exception_8cpp_source.html  (+308 more)
api/v1.0.0/: AddressVector_8cpp.html  AddressVector_8cpp_source.html  Domain_8cpp.html  (+351 more)
docs/: Addressability-Best-Practices.md  Addressability-Containers.md  Addressability-Orchestration.md  Addressability-Parsing.md  Addressability-Real-World-Examples.md  Addressability-Structure.md  Addressability-Troubleshooting.md  Addressability-URI-Format.md  Addressability-UUID-Format.md  Addressability.md  Architecture-Continuous-Ringbuffer-IO.md  Architecture-Discrete-Grain-IO.md  Architecture-Flow-Types.md  Architecture-Format-Float32.md  Architecture-Format-SMPTE291.md  Architecture-Format-v210.md  Architecture-Format-v210a.md  Architecture-Practical-Examples.md  Architecture-Security.md  Architecture-Shared-Memory.md  Architecture.md  Building-CI-CD.md  Building-CMake-Integration.md  Building-CMake-Presets.md  Building-Devcontainer.md  Building-Docker.md  Building-Installation.md  Building-Performance.md  Building-Prerequisites.md  Building-Running-Tests.md  Building-Rust.md  Building-Static.md  Building-Troubleshooting.md  Building-macOS.md  Building.md  Configuration-Advanced.md  Configuration-Best-Practices.md  Configuration-Domain-Level.md  Configuration-Flow-Level.md  Configuration-JSON-Schema.md  (+40 more)
examples/: Dockerfile.efa  Dockerfile.efa.base  Dockerfile.efa.reader  Dockerfile.efa.writer  Dockerfile.reader.multistage  Dockerfile.writer.audio.loop.multistage  Dockerfile.writer.efa.ubuntu  Dockerfile.writer.multistage  Dockerfile.writer.txt  Dockerfile.writer.video.loop.multistage  EFA_LOCAL_MAC_SETUP.md  K8S_README.md  MULTISTAGE_README.md  SRT_OUT_README.md  build-efa-local.sh  docker-compose.efa.local.yaml  docker-compose.multistage.yaml  docker-compose.yaml  kube-deployment-1-node.yaml  kube-deployment-fabric.yaml  kube-deployment-load-balancer.yaml  kube-local-1-node-efa.yaml  kube-local-1-node.yaml  kube-local-3-nodes.yaml  podman-compose.yaml  stream.sh
lib/: CMakeLists.txt
main/: 404.html  index.html  search.json
rust/: Cargo.toml
rust/gst-mxl-rs/: Cargo.toml  build.rs
rust/gst-mxl-rs/scripts/: gst-mxl-closedcaptions.sh
rust/gst-mxl-rs/src/: SUMMARY.md  clock.rs  lib.rs
rust/gst-mxl-rs/src/format/: data.rs
rust/gst-mxl-rs/src/mxlsink/: imp.rs  mod.rs  render_audio.rs  render_continuous.rs  render_data.rs  render_discrete.rs  render_video.rs  sink_tests.rs  state.rs
rust/gst-mxl-rs/src/mxlsrc/: create_audio.rs  create_continuous.rs  create_data.rs  create_discrete.rs  create_video.rs  imp.rs  mod.rs  mxl_helper.rs  src_tests.rs  state.rs  timing.rs
rust/gst-mxl-rs/tests/: audio_round_trip.rs  av_sync.rs  data_round_trip.rs  mxlsrc_timing.rs  video_data_sync.rs
rust/gst-mxl-rs/tests/common/: mod.rs
test-doc-build/: index.html
tools/: CMakeLists.txt  SUMMARY.md
tools/mxl-fabrics-demo/: CMakeLists.txt  SUMMARY.md  demo.cpp
tools/mxl-fabrics-info/: CMakeLists.txt  main.cpp
tools/mxl-gst/: CMakeLists.txt  SUMMARY.md  looping_filesrc.cpp  mxl-to-yuv.cpp  sink.cpp  testsrc.cpp  utils.hpp  videosink.cpp  videotestsrc.cpp
tools/mxl-info/: CMakeLists.txt  SUMMARY.md  main.cpp
v1.0.0/: index.html  search.json
v1.0.1/: index.html  search.json
v1.1.0-beta-1/: index.html
(+937 files in other folders)
